traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:4: error: value getX is not a member of Int
  ecritMessage(getMondeHauteur() getX())
                                 ^