traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var x:Int = 0
  while (getMondeHauteur()!=getX() ){
    while (getMondeLargeur()!=getY()){
  ecritMessage(getMondeHauteur() getX())
 x+=1
    setPos(x/getMondeHauteur(),x%getMondeLargeur())
    }  
  }
  x+=1
  ecritMessage(x)
}